# dash-data-table

./: .gitignore  .npmignore  DESCRIPTION  NAMESPACE  Project.toml  README.md  _validate_init.py  cli.py  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml  test.yml
R/: dashDataTable.R  internal.R
dash_data_table/: __init__.py  dash_data_table.min.js  dash_data_table.min.js.map
docs/: app.py  view.py
docs/assets/: main.css
docs/components/: doc.py  gallery.py  wrapper.py
docs/views/: docs.py  examples.py  home.py
examples/: clicked_rows.py  complex_cells.py  remote_pagination.py  remote_sorting.py  selectable_rows.py  simple.py  sorting.py
man/: dashDataTable.Rd
src/: dashdatatable.jl  index.js
src/components/: DashDataTable.react.js
src/helper-components/: BadgeList.js  Button.js  CellRender.js  Checkbox.js  Expanded.js  Icon.js  Link.js  utils.js
src/lib/: index.js
src/lib/components/: DashDataTable.react.js
tests/: test_usage.py
