[tool.poetry]
name = "dash_data_table"
version = "0.1.0"
description = ""
authors = ["Jakob Jul Elben <elbenjakobjul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dash = "^1.19.0"

[tool.poetry.dev-dependencies]
dash = {extras = ["dev", "testing"], version = "^1.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
